--- a/CarRental/Areas/Admin/Views/Orders/Index.cshtml
+++ b/CarRental/Areas/Admin/Views/Orders/Index.cshtml
@@ -73,7 +73,7 @@
                                             foreach (var item in Model)
                                             {
                                                 <tr data-status-id="@item.StatusId">
-                                                    <td class="text-bold-500">@i++</td>
+                                                    <td class="text-bold-500">@(i++)</td>
                                                     <td>@Html.DisplayFor(modelItem => item.OrderId)</td>
                                                     <td class="text-bold-500">@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                                     <td>@Html.DisplayFor(modelItem => item.Status.StatusDescription)</td>
