--- a/CarRental/Views/Product/Details.cshtml
+++ b/CarRental/Views/Product/Details.cshtml
@@ -125,22 +125,22 @@
                     <div class="single-product-thumb swiper-container gallery-thumbs">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="assets/images/product/small-size/1.jpg" alt="Product">
+                                <img src="@Model.Image" alt="Product">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/images/product/small-size/2.jpg" alt="Product">
+                                <img src="@Model.Image" alt="Product">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/images/product/small-size/3.jpg" alt="Product">
+                                <img src="@Model.Image" alt="Product">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/images/product/small-size/4.jpg" alt="Product">
+                                <img src="@Model.Image" alt="Product">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/images/product/small-size/5.jpg" alt="Product">
+                                <img src="@Model.Image" alt="Product">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/images/product/small-size/6.jpg" alt="Product">
+                                <img src="@Model.Image" alt="Product">
                             </div>
                         </div>
                         <!-- Add Arrows -->
@@ -320,7 +320,7 @@
 
                                     <div class="pro_review mb-5">
                                         <div class="review_thumb">
-                                            <img alt="review images" src="assets/images/review/1.jpg">
+                                            <img alt="review images" src="~/assets/images/review/1.jpg">
                                         </div>
                                         <div class="review_details">
                                             <div class="review_info mb-2">
