--- a/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -73,6 +73,9 @@
                                     <a asp-controller="Orders" asp-action="Index">Quản lí đơn đặt xe</a>
                                 </li>
                                 <li class="submenu-item ">
+                                    <a asp-controller="Customer" asp-action="Index">Khách hàng</a>
+                                </li>
+                                <li class="submenu-item ">
                                     <a href="/Admin/file-manager">Quản lí FILE</a>
                                 </li>
                                
