--- a/CarRental/Areas/Admin/Views/Customer/Details.cshtml
+++ b/CarRental/Areas/Admin/Views/Customer/Details.cshtml
@@ -15,7 +15,7 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12 col-md-6 order-md-1 order-last">
-                    <h3>Thêm mới</h3>
+                    <h3>Khách hàng</h3>
                     @* <p class="text-subtitle text-muted">
                         Give textual form controls like input upgrade with
                         custom styles,
@@ -25,8 +25,8 @@
                 <div class="col-12 col-md-6 order-md-2 order-first">
                     <nav aria-label="breadcrumb" class="breadcrumb-header float-start float-lg-end">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Input</li>
+                            <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Tổng Quan</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Khách hàng</li>
                         </ol>
                     </nav>
                 </div>
@@ -35,7 +35,7 @@
         <section class="section">
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">Thêm mới xe</h4>
+                    <h4 class="card-title">Chi tiết khách hàng</h4>
                 </div>
 
                 <div class="card-body">
