--- a/CarRental/Areas/Admin/Views/Home/Index.cshtml
+++ b/CarRental/Areas/Admin/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="main">
+﻿@using CarRental.Utilities;
+<div id="main">
     <header class="mb-3">
         <a href="#" class="burger-btn d-block d-xl-none">
             <i class="bi bi-justify fs-3"></i>
@@ -6,7 +7,7 @@
     </header>
 
     <div class="page-heading">
-        <h3>Profile Statistics</h3>
+        <h3>Xin chào @Function._UserName !</h3>
     </div>
     <div class="page-content">
         <section class="row">
