--- a/CarRental/Views/Cart/Checkout.cshtml
+++ b/CarRental/Views/Cart/Checkout.cshtml
@@ -11,10 +11,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Checkout</h3>
+                    <h3 class="title-3">Thanh toán</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li>Checkout</li>
+                        <li><a href="index.html">Trang chủ</a></li>
+                        <li>Thanh toán</li>
                     </ul>
                 </div>
             </div>
@@ -27,33 +27,23 @@
     <div class="container custom-container">
         <div class="row">
             <div class="col-12 col-custom">
-                <div class="coupon-accordion">
-                    <h3>Returning customer? <span id="showlogin">Click here to login</span></h3>
-                    <div id="checkout-login" class="coupon-content">
+                <div class="coupon-accordion" style="background-color:#FEF7F4; ">
+                    <h3>Giấy tờ cho thuê xe? <span id="showlogin">Tìm hiểu thêm</span></h3>
+                    <div id="checkout-login" class="coupon-content" style="background-color:#FEF7F4; border-left: 8px solid #f26a2b;">
                         <div class="coupon-info">
                             <p class="coupon-text">
-                                Quisque gravida turpis sit amet nulla posuere lacinia. Cras sed est
-                                sit amet ipsum luctus.
+                                <i class="bi bi-exclamation-circle-fill"></i> chọn 1 trong hai hình thức
                             </p>
-                            <form action="#">
-                                <p class="form-row-first">
-                                    <label>Username or email <span class="required">*</span></label>
-                                    <input type="text">
-                                </p>
-                                <p class="form-row-last">
-                                    <label>Password <span class="required">*</span></label>
-                                    <input type="password">
-                                </p>
-                                <p class="form-row">
-                                    <input type="checkbox" id="remember_me">
-                                    <label for="remember_me">Remember me</label>
-                                </p>
-                                <p class="lost-password"><a href="#">Lost your password?</a></p>
-                            </form>
-                        </div>
+                            <p class="coupon-text">
+                                <i class="bi bi-credit-card-2-front"></i> GPLX (đối chiếu) & CCCD (đối chiếu VNeID)
+                            </p>
+                            <p class="coupon-text">
+                                <i class="bi bi-passport-fill"></i> GPLX (đối chiếu) & Passport (giữ lại)
+                            </p>
+                        </div> 
                     </div>
-                    <h3>Have a coupon? <span id="showcoupon">Click here to enter your code</span></h3>
-                    <div id="checkout_coupon" class="coupon-checkout-content">
+                    <h3>Bạn có mã giảm giá? <span id="showcoupon">Ấn vào đây để nhập mã giảm giá</span></h3>
+                    <div id="checkout_coupon" class="coupon-checkout-content" style="background-color:#FEF7F4; border-left: 8px solid #f26a2b;">
                         <div class="coupon-info">
                             <form action="#">
                                 <p class="checkout-coupon">
@@ -70,13 +60,13 @@
             <div class="col-lg-6 col-12 col-custom">
                 <form id="checkoutForm" >
                     <div class="checkbox-form">
-                        <h3>Billing Details</h3>
+                        <h3>Chi tiết </h3>
                         <div class="row">
                             <div class="different-address">
                                 <div class="order-notes mt-3">
                                     <div class="checkout-form-list checkout-form-list-2">
-                                        <label>Order Notes</label>
-                                        <textarea  id="notes" cols="30" rows="10" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                                        <label>Lời nhắn</label>
+                                        <textarea  id="notes" cols="30" rows="10" placeholder="Lời nhắn về thời gian, địa điểm giao xe"></textarea>
                                     </div>
                                 </div>
                                 <div class="ship-different-title">
