--- a/CarRental/Views/Product/Details.cshtml
+++ b/CarRental/Views/Product/Details.cshtml
@@ -71,10 +71,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3" style="color:aliceblue ">Product Details</h3>
-                    <ul style="color:aliceblue ">
-                        <li><a href="index.html" style="color:aliceblue ">Home</a></li>
-                        <li style="color:aliceblue ">Product Details</li>
+                    <h3 class="title-3" >Chi tiết sản phẩm</h3>
+                    <ul >
+                        <li><a href="index.html" >Trang chủ</a></li>
+                        <li >Chi tiết sản phẩm</li>
                     </ul>
                 </div>
             </div>
