--- a/CarRental/Views/Product/Index.cshtml
+++ b/CarRental/Views/Product/Index.cshtml
@@ -4,10 +4,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Shop Sidebar</h3>
+                    <h3 class="title-3">Xe</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li>Shop</li>
+                        <li><a href="index.html">Trang chủ</a></li>
+                        <li>Xe</li>
                     </ul>
                 </div>
             </div>
