--- a/CarRental/Views/Blog/Details.cshtml
+++ b/CarRental/Views/Blog/Details.cshtml
@@ -1,4 +1,7 @@
-﻿@model Blog  
+﻿@model Blog 
+@{
+    List<BlogComment> blogComments = ViewBag.blogComment;
+}
 <!-- Blog Area Wrapper Start Here -->
 <div class="blog-area-wrapper">
     <!-- Breadcrumb Area Start Here -->
@@ -56,48 +59,34 @@
                             </div>
                             <div class="comment-area-wrapper mt-5">
                                 <div class="comments-view-area">
-                                    <h3 class="mb-5">3 Comments</h3>
-                                    <div class="single-comment-wrap mb-4 d-flex">
-                                        <figure class="author-thumb">
-                                            <a href="#">
-                                                <img src="assets/images/review/1.jpg" alt="Author">
-                                            </a>
-                                        </figure>
-                                        <div class="comments-info">
-                                            <p class="mb-2">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet</p>
-                                            <div class="comment-footer d-flex justify-content-between">
-                                                <a href="#" class="author"><strong>Duy</strong> - July 30, 2022</a>
-                                                <a href="#" class="btn-reply"><i class="fa fa-reply"></i> Reply</a>
+                                        <h3 class="mb-5">@blogComments.Count() Comments</h3>
+                                        @foreach(var item in blogComments)
+                                        {
+                                            <div class="single-comment-wrap mb-4 d-flex">
+                                                <figure class="author-thumb">
+                                                    <a href="#">
+                                                        <img src="~/assets/images/review/1.jpg" alt="Author">
+                                                    </a>
+                                                </figure>
+                                                <div class="comments-info">
+                                                    <p class="mb-2">@item.Detail</p>
+                                                    <div class="comment-footer d-flex justify-content-between">
+                                                        <div class="pro_review mb-5">
+                                                            <div class="review_thumb">
+                                                                @*  <img alt="review images" src="assets/images/review/1.jpg"> *@
+                                                            </div>
+                                                            <div class="review_details">
+                                                                <div class="review_info mb-2">
+
+                                                                    <h5>@item.Name - <span> @item.CreatedDate.Value.ToString("dd/MM/yyyy")</span></h5>
+                                                                </div>
+                                                                <p>@item.Detail</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <div class="single-comment-wrap mb-4 comment-reply d-flex">
-                                        <figure class="author-thumb">
-                                            <a href="#">
-                                                <img src="assets/images/review/1.jpg" alt="Author">
-                                            </a>
-                                        </figure>
-                                        <div class="comments-info">
-                                            <p class="mb-2">Praesent bibendum risus pellentesque faucibus rhoncus. Etiam a mollis odio. Integer urna nisl, fermentum eu mollis et, gravida eu elit.</p>
-                                            <div class="comment-footer d-flex justify-content-between">
-                                                <a href="#" class="author"><strong>Jack</strong> - July 30, 2022</a> <a href="#" class="btn-reply"><i class="fa fa-reply"></i> Reply</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="single-comment-wrap mb-4 d-flex">
-                                        <figure class="author-thumb">
-                                            <a href="#">
-                                                <img src="assets/images/review/1.jpg" alt="Author">
-                                            </a>
-                                        </figure>
-                                        <div class="comments-info">
-                                            <p class="mb-2">Praesent bibendum risus pellentesque faucibus rhoncus. Etiam a mollis odio. Integer urna nisl, fermentum eu mollis et, gravida eu elit.</p>
-                                            <div class="comment-footer d-flex justify-content-between">
-                                                <a href="#" class="author"><strong>Duy</strong> - July 30, 2022</a>
-                                                <a href="#" class="btn-reply"><i class="fa fa-reply"></i> Reply</a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                        }                                    
                                 </div>
                             </div>
                         </section>
@@ -106,86 +95,90 @@
                     <!-- Blog Comments Area Start Here -->
                     <form action="#">
                         <div class="comment-box">
-                            <h3>Leave A Comment</h3>
-                            <div class="row">
-                                <div class="col-12 col-custom">
-                                    <div class="input-item mt-4 mb-4">
-                                        <textarea cols="30" rows="5" name="comment" class="border rounded-0 w-100 custom-textarea input-area" placeholder="Message"></textarea>
+                            <h3>Thêm bình luận của bạn</h3>
+                            <form asp-action="Reviews">
+                                <div class="row">
+                                    <div class="col-12 col-custom">
+                                        <div class="input-item mt-4 mb-4">
+                                            <textarea id="n-comment" cols="30" rows="5" name="comment" class="border rounded-0 w-100 custom-textarea input-area" placeholder="Lời nhắn"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-custom">
+                                        <div class="input-item mb-4">
+                                            <input id="n-name" class="border rounded-0 w-100 input-area name" type="text" placeholder="Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-custom">
+                                        <div class="input-item mb-4">
+                                            <input id="n-email" class="border rounded-0 w-100 input-area email" type="text" placeholder="Email">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-custom mt-40">
+
+                                        <button id="n-submit" type="submit" class="btn flosun-button primary-btn rounded-0 w-100" data-id="@Model.BlogId">Tải lên</button>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-custom">
-                                    <div class="input-item mb-4">
-                                        <input class="border rounded-0 w-100 input-area name" type="text" placeholder="Name">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-custom">
-                                    <div class="input-item mb-4">
-                                        <input class="border rounded-0 w-100 input-area email" type="text" placeholder="Email">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-custom mt-40">
-                                    <button type="submit" class="btn flosun-button primary-btn rounded-0 w-100">Post comment</button>
-                                </div>
-                            </div>
+                            </form> 
+
                         </div>
                     </form>
                     <!-- Blog Comments Area End Here -->
-                </div>
-                <div class="col-lg-3 col-12 col-custom">
-                    <!-- Sidebar Widget Start -->
-                    <aside class="sidebar_widget widget-mt">
-                        <div class="widget_inner">
-                            <div class="widget-list widget-mb-1">
-                                <h3 class="widget-title">Search</h3>
-                                <div class="search-box">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search Our Store" aria-label="Search Our Store">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-outline-secondary" type="button">
-                                                <i class="fa fa-search"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="widget-list widget-mb-1">
-                                <h3 class="widget-title">Categories</h3>
-                                <div class="sidebar-body">
-                                    <ul class="sidebar-list">
-                                        <li><a href="#">All Product</a></li>
-                                        <li><a href="#">Best Seller (5)</a></li>
-                                        <li><a href="#">Featured (4)</a></li>
-                                        <li><a href="#">New Products (6)</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="widget-list widget-mb-3">
-                                <h3 class="widget-title">Tags</h3>
-                                <div class="sidebar-body">
-                                    <ul class="tags">
-                                        <li><a href="#">Rose</a></li>
-                                        <li><a href="#">Sunflower</a></li>
-                                        <li><a href="#">Tulip</a></li>
-                                        <li><a href="#">Lily</a></li>
-                                        <li><a href="#">Smart</a></li>
-                                        <li><a href="#">Modern</a></li>
-                                        <li><a href="#">Gift</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="widget-list mb-0">
+                @* 
+                            <div class="widget-list mb-0"> 
                                 <h3 class="widget-title">Recent Products</h3>
                                 <div class="sidebar-body">
                                     @await Component.InvokeAsync("RecentProducts")
                                 </div>
-                            </div>
-                        </div>
-                    </aside>
-                    <!-- Sidebar Widget End -->
+                            </div>     *@             
                 </div>
             </div>
         </div>
     </div>
-    <!-- Blog Main Area End Here -->
 </div>
-<!-- Blog Area Wrapper End Here -->
+@section scripts {
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        $(document).ready(function () {
+
+           $("#n-submit").click(function() {
+                    const reviewData = {
+                        name: $('#name').val(),
+                        email: $('#email').val(),
+                        detail: $('#detail').val(),                       
+                        blogId: $(this).data("blogId"),
+
+                    };
+                 $.ajax({
+                    url : "/Blog/Comment",
+                    type : "POST",
+                    data : reviewData,
+                    success: function(data) {
+                            console.log(data);
+                            Swal.fire({
+                            position: "top-end",
+                            icon: "success",
+                            title: "Your work has been saved",
+                            showConfirmButton: false,
+                            timer: 1500
+                            });
+                            // Thêm bình luận mới vào danh sách hiện tại
+                            appendNewReview(reviewData);
+                            // Xóa nội dung các ô input sau khi gửi
+                            $("#n_name").val("");
+                            $("#n_email").val("");
+                            $("#n_comment").val("");
+
+                        },
+                    error: function() {
+                            Swal.fire({
+                                icon: "error",
+                                title: "Oops...",
+                                text: "Something went wrong!",
+                                footer: '<a href="#">Why do I have this issue?</a>'
+                            });
+                    }
+                });
+            });
+        });
+    </script>
+}
